<?xml version="1.0"?>
<package format="2">
  <name>svaya_control</name>
  <version>0.0.0</version>
  <description>The svaya_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="svaya.aiu@todo.todo">Svaya Aiu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
   <build_depend>trajectory_msgs</build_depend>
    <build_depend>urdf</build_depend>
     <build_depend>std_msgs</build_depend>
    <build_depend>message_filters</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosparam_shortcuts</build_depend>
   <build_depend>remote_mutex</build_depend>


   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>trajectory_msgs</build_export_depend>
    <build_export_depend>urdf</build_export_depend>
     <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>rosparam_shortcuts</build_export_depend>
   <build_export_depend>remote_mutex</build_export_depend>
   
    <exec_depend>roscpp</exec_depend>
   <exec_depend>trajectory_msgs</exec_depend>
    <exec_depend>urdf</exec_depend>
     <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_filters</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosparam_shortcuts</exec_depend>
   <exec_depend>remote_mutex</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
    <!--controller_interface plugin="${prefix}/svaya_hw_plugins.xml"/ -->
  </export>
</package>

